--- a/11/ex11-10.html
+++ b/11/ex11-10.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>캔버스에 꽉 차게 이미지 그리기</title>
+	<meta charset="UTF-8">
+	<title>캔버스에 꽉 차게 이미지 그리기</title>
 </head>
+
 <body>
-<h3>캔버스에 꽉 차게 이미지 그리기</h3>
-<hr>
-<canvas id="myCanvas" 
-		style="background-color:aliceblue"
-	 	width="500" height="300"></canvas>
-<script>
-	var canvas = document.getElementById("myCanvas");
-	var context = canvas.getContext("2d");
-	
-	var img = new Image();
-	img.onload = function () {
-		context.drawImage(img, 0, 0, canvas.width, canvas.height);
-	}
-	img.src = "media/olivia.jpg";
-</script>	 
+	<h3>캔버스에 꽉 차게 이미지 그리기</h3>
+	<hr>
+	<canvas id="myCanvas" style="background-color:aliceblue" width="500" height="300"></canvas><br>
+	<canvas id="myCanvas2" style="background-color:aliceblue" width="500" height="300"></canvas>
+	<script>
+		var canvas = document.getElementById("myCanvas");
+		var context = canvas.getContext("2d");		
+
+		var canvas2 = document.getElementById("myCanvas2");
+		var context2 = canvas2.getContext("2d");
+
+		var img = new Image();		
+		var img2 = new Image();
+
+		img.src = "media/olivia.jpg";
+		img2.src = "media/logo.png";
+
+		img.onload = function () {
+			context.drawImage(img, 0, 0, canvas.width, canvas.height);
+		}				
+		img2.onload=function() {
+			context2.drawImage(img2, 0, 0, canvas2.width, canvas2.height);
+		}
+	</script>
 </body>
 </html>
