--- a/11/ex11-11.html
+++ b/11/ex11-11.html
@@ -1,48 +1,68 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>마우스 드래깅으로 캔버스에 그림 그리기</title></head>
+	<meta charset="UTF-8">
+	<title>마우스 드래깅으로 캔버스에 그림 그리기</title>
+</head>
+
 <body onload="init()">
-<h3>마우스를 누른 채 드래깅하여 그림 그려 보세요</h3>
-<hr>
-<canvas id="myCanvas" style="background-color:aliceblue" width="400" height="300">
-</canvas>
-<script>
-var canvas, context;
-function init() {
-	canvas = document.getElementById("myCanvas");
-	context = canvas.getContext("2d");
-	
-	context.lineWidth = 2; 
-	context.strokeStyle = "blue";
+	<h3>마우스를 누른 채 드래깅하여 그림 그려 보세요</h3>
+	<hr>
+	<form>
+		<select name = "색상" id="colorSelect">
+			<option value="none" selected>==선택==</option>
+			<option value="red" selected>red</option>
+			<option value="blue" selected>blue</option>
+		</select>
+	</form><br>
+	<canvas id="myCanvas" style="background-color:aliceblue" width="400" height="300"></canvas>
+	<script>
+		var canvas, context, colorOption;
 
-	canvas.addEventListener("mousemove", function (e) { move(e) }, false);
-	canvas.addEventListener("mousedown", function (e) { down(e) }, false);
-	canvas.addEventListener("mouseup", function (e) { up(e) }, false);
-	canvas.addEventListener("mouseout", function (e) { out(e) }, false);
-}
+		function init() {
+			canvas = document.getElementById("myCanvas");
+			context = canvas.getContext("2d");			
 
-var startX=0, startY=0; // 마우스의 마지막 포인터 좌표
-var drawing=false;
-function draw(curX, curY) { 
-	context.beginPath();
-	context.moveTo(startX, startY);
-	context.lineTo(curX, curY);
-	context.stroke();
-}
-function down(e) { 
-	startX = e.offsetX; startY = e.offsetY;
-	drawing = true;
-}
-function up(e) { drawing = false; }
-function move(e) {
-	if(!drawing) return; // 마우스가 눌러지지 않았으면 리턴
-	var curX = e.offsetX, curY = e.offsetY;
-	draw(curX, curY);	
-	startX = curX; startY = curY;
-}
-function out(e) { drawing = false; }
-</script>
+			context.lineWidth = 2;
+			context.strokeStyle = "blue";
+
+			canvas.addEventListener("mousemove", function (e) { move(e) }, false);
+			canvas.addEventListener("mousedown", function (e) { down(e) }, false);
+			canvas.addEventListener("mouseup", function (e) { up(e) }, false);
+			canvas.addEventListener("mouseout", function (e) { out(e) }, false);			
+		}
+
+		var startX = 0, startY = 0; // 마우스의 마지막 포인터 좌표
+		var drawing = false;        //그리는 중인지 아닌지 불린 값
+
+		function draw(curX, curY) {
+			context.beginPath();
+			context.moveTo(startX, startY);   //처음 시작(자국이 남으면 안되니까 moveTo)
+			context.lineTo(curX, curY);       //그리는 동안(자국이 남아야 하니까 lineTo)
+			context.stroke();
+		}
+
+		function down(e) {
+			context.strokeStyle = returnColor();
+			startX = e.offsetX; startY = e.offsetY;
+			drawing = true;
+		}
+
+		function up(e) { drawing = false; }
+
+		function move(e) {
+			if (!drawing) return; // 마우스가 눌러지지 않았으면 리턴
+			var curX = e.offsetX, curY = e.offsetY;
+			draw(curX, curY);
+			startX = curX; startY = curY;
+		}
+
+		function out(e) { drawing = false; }
+
+		function returnColor() {
+			return document.getElementById("colorSelect").value;
+		}
+	</script>
 </body>
 </html>
